<resources>
    <string name="app_name">SaveWallet</string>

    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_report">Report</string>
    <string name="title_account">Account</string>

    <string name="title_splash">Let\'s Get Started</string>
    <string name="subtitle_splash">Save your money through us</string>

    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>

    <string name="register_success">Register Success</string>

    <string name="name">John</string>
    <string name="email">john@example.com</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">New Password Confirmation</string>

    <string name="hello">Hello,</string>

    <string name="total_balance">Total Balance</string>
    <string name="wallet">Rp 1.200.000</string>
    <string name="date">Thu, 4 Aug 2022</string>
    <string name="income">Income</string>
    <string name="income_wallet">Rp. 1.000.000</string>
    <string name="expense">Expense</string>
    <string name="expense_wallet">Rp. 1.200.000</string>
    <string name="todays_transaction">Today\'s Transaction</string>
    <string name="description">Description</string>

    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_money">Transaction Money</string>
    <string name="transaction_description">Transaction Description</string>
</resources>