<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_wallet_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="left"
                android:text="@string/add_transaction"
                android:textColor="@color/main_color"
                android:textSize="32dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/transaction_type"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/open_sans"
                android:gravity="top"
                />

            <RadioGroup
                android:id="@+id/transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/income_type"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/income"
                    android:checked="true"
                    android:buttonTint="@color/main_color"
                    />
                <RadioButton
                    android:id="@+id/expense_type"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/expense"
                    android:buttonTint="@color/main_color"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/money_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="number"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:hint="@string/transaction_money"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:hint="@string/transaction_description"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <!--progress bar for loading -->
            <ProgressBar
                android:id="@+id/idLoadingPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/main_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_add_transaction"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:text="@string/add_transaction"
                app:cornerRadius="5dp"
                android:textColor="#fff"
                android:fontFamily="@font/open_sans_bold"
                android:backgroundTint="@color/main_color"
                tools:ignore="DuplicateSpeakableTextCheck">

            </Button>

        </LinearLayout>
    </LinearLayout>
</ScrollView>