<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:columnCount="2"
                android:rowCount="1">
                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/hello"
                        android:textColor="@color/black"
                        android:textSize="20sp">

                    </TextView>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/name"
                        android:textColor="@color/main_color"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/search_donor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_profile_picture" />
                </LinearLayout>
            </GridLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_color"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_balance"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/white"
                    android:gravity="center">

                </TextView>

                <TextView
                    android:id="@+id/wallet_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    android:layout_marginTop="50dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/white"
                    android:gravity="center">

                </TextView>

                <TextView
                    android:id="@+id/wallet_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/black"
                    android:gravity="center">

                </TextView>
            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:layout_alignParentTop="true"
                android:elevation="20dp"
                android:columnCount="2"
                android:rowCount="1">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:backgroundTint="@color/white"
                        android:layout_marginStart="20dp"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardCornerRadius="20dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/income"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textSize="14sp"
                            android:fontFamily="@font/open_sans_bold"
                            android:textColor="@color/black"
                            android:gravity="center">

                        </TextView>

                        <TextView
                            android:id="@+id/income_wallet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/income_wallet"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textSize="14sp"
                            android:fontFamily="@font/open_sans_bold"
                            android:textColor="@color/main_color"
                            android:gravity="center">

                        </TextView>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:backgroundTint="@color/white"
                        android:layout_marginStart="10dp"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardCornerRadius="20dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expense"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textSize="15sp"
                            android:fontFamily="@font/open_sans_bold"
                            android:textColor="@color/black"
                            android:gravity="center">

                        </TextView>

                        <TextView
                            android:id="@+id/expense_wallet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expense_wallet"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textSize="14sp"
                            android:fontFamily="@font/open_sans_bold"
                            android:textColor="@color/error_color"
                            android:gravity="center">

                        </TextView>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="330dp"
                android:layout_alignParentTop="true"
                android:elevation="20dp"
                android:columnCount="2"
                android:rowCount="1">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_transaction"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/open_sans_bold"
                        android:textColor="@color/black"
                        android:gravity="left">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical">

                </LinearLayout>
            </GridLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="365dp" />
    </LinearLayout>
</ScrollView>