<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="left"
                android:text="@string/register"
                android:textColor="@color/main_color"
                android:textSize="32dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/editTextRegisterName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <EditText
                android:id="@+id/editTextRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <EditText
                android:id="@+id/editTextRegisterPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_color"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_confirmation"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/main_color"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/main_color"
                />

            <!--progress bar for loading -->
            <ProgressBar
                android:id="@+id/idLoadingPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/main_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:text="@string/register"
                app:cornerRadius="5dp"
                android:textColor="#fff"
                android:fontFamily="@font/open_sans_bold"
                android:backgroundTint="@color/main_color"
                tools:ignore="DuplicateSpeakableTextCheck">

            </Button>

        </LinearLayout>
    </LinearLayout>
</ScrollView>